[gd_scene load_steps=19 format=2]

[ext_resource path="res://environment/portal/textures/portal_foreground.png" type="Texture" id=1]
[ext_resource path="res://environment/portal/textures/portal_pillars.png" type="Texture" id=2]
[ext_resource path="res://environment/portal/textures/portal_background.png" type="Texture" id=3]
[ext_resource path="res://environment/portal/textures/portal_gate_background.png" type="Texture" id=4]
[ext_resource path="res://utility/interaction/Interaction.tscn" type="PackedScene" id=5]
[ext_resource path="res://environment/portal/textures/portal_gate_foreground.png" type="Texture" id=7]
[ext_resource path="res://environment/portal/textures/rect_mask.png" type="Texture" id=8]
[ext_resource path="res://environment/portal/Portal.gd" type="Script" id=11]
[ext_resource path="res://environment/runes/textures/runes.png" type="Texture" id=12]
[ext_resource path="res://environment/portal/textures/portal_activation.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 42, 15 )

[sub_resource type="Animation" id=2]
resource_name = "close"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("PortalOpening:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PortalOpening:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 8, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PortalBackground:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PortalForeground:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PortalBackground:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PortalForeground:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PortalBackground:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PortalForeground:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlayerMask:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PortalOpening:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "open"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("PortalOpening:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PortalOpening:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 8 ]
}

[sub_resource type="Animation" id=5]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Runes/DoubleJump:position")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( -25, -56 ), Vector2( 39, -40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Runes/Dash:position")
tracks/1/interp = 2
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 0, -56 ), Vector2( 71, -40 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Runes/WallJump:position")
tracks/2/interp = 2
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 25, -56 ), Vector2( 103, -40 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Runes:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 12 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 12 )
region = Rect2( 48, 0, 16, 16 )

[node name="Interaction" instance=ExtResource( 5 )]
script = ExtResource( 11 )

[node name="Sprite" parent="." index="0"]
position = Vector2( 71, -16 )
texture = ExtResource( 2 )

[node name="IconLeftOffset" parent="Sprite/Icons" index="0"]
position = Vector2( -37, 0 )

[node name="IconRightOffset" parent="Sprite/Icons" index="1"]
position = Vector2( 39, 0 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 71, -15 )
shape = SubResource( 1 )

[node name="GateBackground" type="Sprite" parent="." index="3"]
position = Vector2( 183, -37 )
texture = ExtResource( 4 )

[node name="PortalBackground" type="Sprite" parent="." index="4"]
visible = false
position = Vector2( 179, -29 )
texture = ExtResource( 3 )
hframes = 9
frame = 7

[node name="GateForeground" type="Sprite" parent="." index="5"]
position = Vector2( 183, -37 )
z_index = 10
texture = ExtResource( 7 )

[node name="PortalForeground" type="Sprite" parent="." index="6"]
visible = false
position = Vector2( 179, -29 )
z_index = 10
texture = ExtResource( 1 )
hframes = 9
frame = 7

[node name="PortalOpening" type="Sprite" parent="." index="7"]
visible = false
position = Vector2( 179, -29 )
z_index = 10
texture = ExtResource( 13 )
hframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="8"]
anims/close = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/open = SubResource( 4 )
anims/runes = SubResource( 5 )

[node name="PlayerMask" type="Light2D" parent="." index="9"]
position = Vector2( 237, -29 )
texture = ExtResource( 8 )
texture_scale = 0.8
energy = 0.0
mode = 3
range_item_cull_mask = 512

[node name="StartWaypoint" type="Position2D" parent="." index="10"]
visible = false

[node name="EndWaypoint" type="Position2D" parent="." index="11"]
visible = false
position = Vector2( 222, 0 )

[node name="CameraPosition" type="Position2D" parent="." index="12"]
visible = false
position = Vector2( 125, -20 )

[node name="Runes" type="Node2D" parent="." index="13"]
visible = false
modulate = Color( 1.5, 1.5, 1.5, 1 )

[node name="DoubleJump" type="Sprite" parent="Runes" index="0"]
light_mask = 0
position = Vector2( 0, -16 )
texture = SubResource( 6 )

[node name="Dash" type="Sprite" parent="Runes" index="1"]
light_mask = 0
position = Vector2( 0, -16 )
texture = SubResource( 7 )

[node name="WallJump" type="Sprite" parent="Runes" index="2"]
light_mask = 0
position = Vector2( 0, -16 )
texture = SubResource( 8 )
